--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="has-text-white-ter">
     <% if user_signed_in? %>
       <nav class="navbar has-background-grey-dark has-text-white-ter">
         <div class="container">
